service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dj-hello-service
spec:
  selector:
    service: dj-hello
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
